# airplane_game_cpp

./: .gitignore  CMakeLists.txt  Readme.txt  main.cpp  main2.cpp  test.txt
src/: Readme.txt  main.cpp
src/airplane_lib/: AirVehicle_class.h  Airplane_class.cpp  Airplane_class.h  Airplane_nsp.cpp  Airplane_nsp.h  CMakeLists.txt  Component.cpp  Component.h  Composite.h  ConcreteCreator.cpp  ConcreteCreator.h  Creator.h  air_vehicles.h  airplane.cpp  airplane_friend.cpp  airplane_friend.h  airplane_header.h
src/airplane_lib/shooting_lib/: CMakeLists.txt  shooting.cpp  shooting_header.h
src/game_map/: CMakeLists.txt  game_header.h  game_map.cpp
src/shooting_lib/: CMakeLists.txt
